fix li spacing out list items too much

--- a/src/scss/pages/_global.scss
+++ b/src/scss/pages/_global.scss
@@ -133,6 +133,7 @@ h1 {
     position: relative;
     margin-right: 7px;
     margin-left: -16px;
+    float: left;
   }
 }
 
